Another attempt to fix line break on mobile.

--- a/frontend/src/app/screens/race/race.component.css
+++ b/frontend/src/app/screens/race/race.component.css
@@ -135,6 +135,7 @@ input[type=radio] {
 
 .strategies label{
 	margin-left: 4px;
+	width: 350px;
 }
 
 .strategies div{
